--- a/_includes/news.liquid
+++ b/_includes/news.liquid
@@ -7,7 +7,7 @@
         style="max-height: 60vw"
       {% endif %}
     >
-      <table class="table table-sm table-borderless">
+      <table class="table table-sm table-borderless" style="border-spacing: 0; border-collapse: collapse;">
         {% assign news = site.news | reverse %}
         {% if include.limit and page.announcements.limit %}
           {% assign news_limit = page.announcements.limit %}
@@ -16,8 +16,8 @@
         {% endif %}
         {% for item in news limit: news_limit %}
           <tr>
-            <th scope="row" style="width: 20%">{{ item.date | date: '%b %d, %Y' }}</th>
-            <td>
+            <th scope="row" style="width: 20%; font-family: 'Monaco', 'Ubuntu Mono', monospace; padding-right: 0.0rem; font-size: 1rem;">{{ item.date | date: '%b %d, %Y' }}</th>
+            <td style="padding-left: 0.0rem; font-size: 1rem;">
               {% if item.inline %}
                 {{ item.content | remove: '<p>' | remove: '</p>' | emojify }}
               {% else %}
