--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -42,8 +42,8 @@ layout: default
 
     <!-- News -->
     {% if page.announcements and page.announcements.enabled %}
-      <h2>
-        <a href="{{ '/news/' | relative_url }}" style="color: inherit">news</a>
+      <h2 style="margin-top: 2rem;">
+        <a href="{{ '/news/' | relative_url }}" style="color: inherit">News</a>
       </h2>
       {% include news.liquid limit=true %}
     {% endif %}
@@ -58,23 +58,19 @@ layout: default
 
     <!-- Selected papers -->
     {% if page.selected_papers %}
-      <h2>
-        <a href="{{ '/publications/' | relative_url }}" style="color: inherit">selected publications</a>
+      <h2 style="margin-top: 2rem;">
+        <a href="{{ '/publications/' | relative_url }}" style="color: inherit">Selected Papers</a>
       </h2>
       {% include selected_papers.liquid %}
     {% endif %}
 
-    <!-- Social -->
-    {% if page.social %}
-      <div class="social">
-        <div class="contact-icons">{% include social.liquid %}</div>
-
-        <div class="contact-note">{{ site.contact_note }}</div>
-      </div>
+    <!-- Selected awards -->
+    {% if page.selected_awards %}
+      <h2 style="margin-top: 2rem;">
+        <a href="{{ '/awards/' | relative_url }}" style="color: inherit">Selected Awards</a>
+      </h2>
+      {% include selected_awards.liquid %}
     {% endif %}
 
-    {% if site.newsletter and site.newsletter.enabled and site.footer_fixed %}
-      {% include newsletter.liquid center=true %}
-    {% endif %}
   </article>
 </div>
