--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1417,3 +1417,17 @@ figure.cover {
     color: #23212d !important;
   }
 }
+
+.news {
+  color: var(--global-text-color);
+  
+  .news-title {
+    color: var(--global-text-color);
+    text-decoration: none;
+    
+    &:hover {
+      color: var(--global-theme-color);
+      text-decoration: underline;
+    }
+  }
+}
