--- a/_includes/news.liquid
+++ b/_includes/news.liquid
@@ -16,8 +16,8 @@
         {% endif %}
         {% for item in news limit: news_limit %}
           <tr>
-            <th scope="row" style="width: 20%; font-family: 'Monaco', 'Ubuntu Mono', monospace; padding-right: 0.0rem; font-size: 1rem;">{{ item.date | date: '%b %d, %Y' }}</th>
-            <td style="padding-left: 0.0rem; font-size: 1rem;">
+            <th scope="row" style="width: 20%; font-family: 'SF Mono', 'Menlo', 'Monaco', 'Consolas', 'Liberation Mono', 'Courier New', monospace; padding-right: 0.0rem; font-size: 0.95rem; font-weight: 500; letter-spacing: -0.0em; vertical-align: middle;">{{ item.date | date: '%b %d, %Y' }}</th>
+            <td style="padding-left: 0.0rem; font-size: 1rem; vertical-align: middle;">
               {% if item.inline %}
                 {{ item.content | remove: '<p>' | remove: '</p>' | emojify }}
               {% else %}
