--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -42,9 +42,7 @@ layout: default
 
     <!-- News -->
     {% if page.announcements and page.announcements.enabled %}
-      <h2 style="margin-top: 2rem;">
-        <a href="{{ '/news/' | relative_url }}" style="color: inherit">News</a>
-      </h2>
+      <h2 style="margin-top: 2rem;">News</h2>
       {% include news.liquid limit=true %}
     {% endif %}
 
@@ -58,9 +56,7 @@ layout: default
 
     <!-- Selected papers -->
     {% if page.selected_papers %}
-      <h2 style="margin-top: 2rem;">
-        <a href="{{ '/publications/' | relative_url }}" style="color: inherit">Selected Papers</a>
-      </h2>
+      <h2 style="margin-top: 2rem;">Selected Papers</h2>
       {% include selected_papers.liquid %}
     {% endif %}
 
